# next-fm

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  predeploy.sh  pyproject.toml  render.yaml
backend/app/: accounts.py  artist_sync.py  auth.py  bandsintown.py  config.py  db.py  event_sync.py  geonames.py  lastfm.py  main.py  matching.py  models.py  musicbrainz.py  observability.py  playlist_sync.py  schemas.py  seed.py  spotify.py  spotify_auth.py  spotify_verify.py  suggestion_sync.py  sync_activities.py  sync_workflow.py  temporal.py  worker.py
backend/app/clients/: lastfm.py  musicbrainz.py  spotify.py  supabase_admin.py
backend/app/core/: accounts.py  auth.py  config.py  db.py  models.py  observability.py  schemas.py  temporal.py
backend/app/sync/: artist_sync.py  event_sync.py  matching.py  playlist_sync.py  suggestion_sync.py  sync_activities.py  sync_workflow.py
backend/cli/: geonames.py  seed.py  spotify_auth.py  spotify_verify.py
backend/migrations/: env.py
backend/migrations/versions/: 01343f3d13b3_add_last_seen_at_and_last_synced_at_to_.py  04d31169cc00_add_suggestions_schema.py  (+18 more)
backend/tests/: helpers.py  test_artist_exclusions.py  test_artist_sync.py  test_auth.py  test_bandsintown.py  test_cities.py  test_event_sync.py  test_exclusions.py  test_health.py  test_lastfm.py  test_matching.py  test_playlist_sync.py  test_playlists.py  test_spotify.py  test_suggestion_sync.py  test_sync_orchestration.py  test_users.py  test_worker_schedule.py
(+215 files in other folders)
